[tool.poetry]
name = "mirrorss"
version = "0.1.0"
description = ""
authors = ["maximiliancw <wunderkind.serie-0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"
flask = "^2.3.2"
validators = "^0.20.0"
diskcache = "^5.6.1"
click = "^8.1.6"
gunicorn = "^21.2.0"

[tool.poetry.scripts]
mirrorss = "mirrorss.cmd:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
